syntax = "proto3";

package disgover;

message Endpoint {
	string Host = 1;
	int64 Port = 2;
}

message Contact {
	string Id = 1;
	Endpoint Endpoint = 2;
}

message FindRequest {
	string ContactId = 1;
	Contact Sender = 2;
}

message Empty {}

service DisgoverRPC {
	rpc PeerPing(Contact) returns (Contact) {}
	rpc PeerFind(FindRequest) returns (Contact) {}
}
