syntax = "proto3";

package disgover;

message Endpoint {
	string 	Host = 1;
	int64 	Port = 2;
}

message Contact {
	bytes 		Id = 1;
	Endpoint 	Endpoint = 2;
}

message FindRequest {
	bytes 	ContactId = 1;
	Contact Sender = 2;
}

message Empty {}

service DisgoverRPC {
	rpc PeerPingGrpc(Contact) returns (Contact) {}
	rpc PeerFindGrpc(FindRequest) returns (Contact) {}
}
